--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 }
 
 .introdesu{
-  font-family:Times New Roman;
+  font-family:Arial;
   font-size:80px;
   color:#e0e0e0;
   text-shadow:0px 0px 9px white;
